# MamboRambo

./: .gitignore  .gitlab-ci.yml  .runner-version  Cargo.toml  README.md  index.html
.github/workflows/: release-mamborambo-desktop.yml  release-mamborambo-server.yml  test-release.yml  website.yml
assets/: index-CCgXdP2g.js  index-CrBw_LZi.css
crates/blue-rs/: .gitignore  Cargo.toml  README.md  voices
crates/blue-rs/examples/: hebrew.rs
crates/blue-rs/src/: chunking.rs  handling.rs  lib.rs  phonemize.rs  text.rs
crates/mamborambo-registry/: Cargo.toml
crates/mamborambo-registry/src/: lib.rs
crates/renikud-plus-rs/: Cargo.toml
crates/renikud-plus-rs/src/: lib.rs
docs/: ADDING_MODELS.md  ARCHITECTURE.md  BUILDING.md
docs/agents/: skill.md
docs/code-signing/: macos.md  windows_esigning.md
mamborambo-desktop/: .gitignore  package.json
mamborambo-desktop/src/: App.tsx
mamborambo-desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
mamborambo-desktop/src-tauri/icons/: icon.icns
mamborambo-server/: Cargo.toml
mamborambo-server/src/: cli.rs
mamborambo-server/src/runtime/: blue.rs  mod.rs
mamborambo-server/src/server/: docs.rs  dto.rs  mod.rs  skill.rs  sources.rs  state.rs
mamborambo-server/src/server/handlers/: load.rs  mod.rs  speech.rs  state.rs
mamborambo-website/: index.html  package.json  vite.config.ts
mamborambo-website/public/: installer.sh
plans/runtime_standalone/: runtime_standalone_001.md
scripts/: Dockerfile.linux-build  build_linux_docker.sh  package-kokoro-models.py  package-models.py  package-server.py  pre_build.py  sign_windows.py  website_links.py
(+29 files in other folders)
