[workspace]
members = [
    "mamborambo-desktop/src-tauri",
    "mamborambo-server",
    "crates/espeak-rs",
    "crates/espeak-rs-sys",
    "crates/ggml-rs-sys",
    "crates/blue-rs",
    "crates/renikud-plus-rs",
    "crates/mamborambo-registry",
]
resolver = "2"

# https://v1.tauri.app/v1/guides/building/app-size/#rust-build-time-optimizations
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
