[package]
name = "mamborambo-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mamborambo-server"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
blue-rs = { path = "../crates/blue-rs" }
mamborambo-registry = { path = "../crates/mamborambo-registry" }
futures-util = "0.3"
clap = { version = "4.5.53", features = ["derive"] }
hound = "3.5.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "net", "time"] }
tower-http = { version = "0.6.7", features = ["catch-panic"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
