[package]
name = "renikud-plus-rs"
version = "0.1.0"
edition = "2024"
license = "CC-BY-4.0"
description = "RenikudPlus Hebrew G2P via ONNX (gender-conditioned speaker inputs)"

[dependencies]
anyhow = "1"
ort = { version = "=2.0.0-rc.11", features = ["ndarray"] }
serde_json = "1"
unicode-normalization = "0.1"
